# AInet-based-Symbolic-Regression

./: .gitignore  README.md
.github/: README-PT.md  README.md
SymbolicRegression/: README.md  SymbolicRegression.cabal
SymbolicRegression/.stack-work/install/x86_64-linux/lts-12.2/8.4.3/flag-cache/: SymbolicRegression-0.1.0.0  loop-0.3.0-Gcl98xwz1Mc7L0xRqBlnhk  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  semigroups-0.18.5-E4FVMc5VZAG98u64romz5
SymbolicRegression/docs/: AInet.html  Dataset.html  Main.html  Manipulators.html  doc-index.html  index.html
SymbolicRegression/src/: AInet.hs  Dataset.hs  Main-stable.hs  Main.hs  Manipulators.hs  Matrix.hs
docs/: AInet.html  Dataset.html  Main.html  Manipulators.html  _config.yml  doc-index.html  index.html  index.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html
docs/assets/css/: main.css  navbar.css  style.css
docs/docs/: Dataset.html  doc-index.html
