name:                SymbolicRegression
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gAldeia.github.com/AInet-Symbolic-Regression
license:             
license-file:        
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable SymbolicRegression
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Matrix, Manipulators, AInet
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, matrix, random